--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-app": "^1.1.2",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-lazyload": "^3.1.0",
     "react-photo-gallery": "^8.0.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
