--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "animate.css": "^4.1.1",
     "bootstrap": "^4.5.3",
+    "gsap": "^3.5.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-animate-on-scroll": "^2.1.5",
@@ -21,6 +22,7 @@
     "react-scripts": "4.0.1",
     "react-truncate": "^2.4.0",
     "reactstrap": "^8.7.1",
+    "scrollmagic": "^2.0.8",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
